--- a/react-site/src/App.css
+++ b/react-site/src/App.css
@@ -1,93 +1,47 @@
-.App {
-  text-align: center;
-}
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-.container {
-  width: 90vw;
-  margin: 0 auto;
-  max-width: var(--max-width);
-}
 .container h2 {
   text-align: center;
   margin: 25px auto;
 }
-.item {
-  background: var(--clr-white);
-  display: flex;
-  justify-content: space-between;
-  max-width: var(--fixed-width);
-  margin: 2rem auto;
-  align-items: center;
-  border-radius: var(--radius);
-}
-.item button,
-.item a {
-  background: transparent;
-  border-color: transparent;
-  color: var(--clr-primary-5);
-  letter-spacing: var(--spacing);
-  cursor: pointer;
-}
-.item {
-  padding: 1rem 2rem;
-}
-.item h4 {
-  margin-bottom: 0;
-}
-.item p {
-  margin-bottom: 0;
-}
-.form {
-  background: var(--clr-white);
-  max-width: var(--fixed-width);
-  margin: 0 auto;
-  margin-bottom: 4rem;
-  padding: 1rem 2rem;
-  border-radius: var(--radius);
-}
-.form input {
-  background: var(--clr-grey-10);
-  border-color: transparent;
-  border-radius: var(--radius);
-  padding: 0.25rem 0.5rem;
-}
-.form-control {
-  margin: 0.5rem 0;
-  display: grid;
-  grid-template-columns: 100px 1fr;
-  align-items: center;
-}
-.form button {
-  display: inline-block;
-  background: var(--clr-black);
-  color: var(--clr-white);
-  border-color: transparent;
-  margin-top: 1rem;
-  letter-spacing: var(--spacing);
-  padding: 0.15rem 0.25rem;
-  text-transform: capitalize;
-  border-radius: var(--radius);
-  cursor: pointer;
-}
+
 .list {
   text-align: left;
   max-width: 750px;
   margin: auto;
 }
+
 .submit-form {
   max-width: 300px;
   margin: auto;
 }
+
 .edit-form {
   max-width: 300px;
   margin: auto;
+}
+/* TODO: Change this to a media query */
+.mobileS {
+  margin-bottom: 20px;
+}
+
+.logo {
+  width: 3.5rem;
+}
+
+.bg-custom1 {
+  background-color: rgba(22, 34, 46, 0.541);
+}
+
+.btn-e {
+  padding: 0.6rem;
+  border-radius: 1.2rem;
+  margin-bottom: 0.5rem;
+  margin-top: -0.5rem;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+div .row {
+  margin: 0 auto;
 }
